data/derived/sp14/progs/unify/prog4505.ml.out
Characters 82-85:
  | []  -> [], snd snd a
                   ^^^
Error: This expression has type 'a * 'b -> 'b
       but an expression was expected of type 'c * ('d -> 'e)
